force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/blng__DebitNoteAllocationCreditNoteLine__c.object-meta.xml
<CustomObject>
    <label>Debit Note Allocation (Credit Note Line)</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Debit Note Allocation (Credit Note Line)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Note Allocations(Credit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>