force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__Balance__c.field-meta.xml
<CustomField>
    <fullName>blng__Balance__c</fullName>
    <formula>blng__Amount__c -  blng__Payments__c + blng__Refunds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>