force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__BillingFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFinanceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipName>BillingFinanceBookDebitNoteACNL</relationshipName>
    <type>Lookup</type>
</CustomField>