force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__CreditNoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditNoteLine__c</fullName>
    <label>Credit Note Line</label>
    <referenceTo>blng__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Debit Note Allocation (Credit Note Line)</relationshipLabel>
    <relationshipName>DebitNoteAllocationCreditNoteLine</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>