force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__DebitNote__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit Note</label>
    <referenceTo>blng__DebitNote__c</referenceTo>
    <relationshipLabel>Debit Note Allocations(Credit Note Line)</relationshipLabel>
    <relationshipName>DebitNoteAllocationsCreditNoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>