force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__Refunds__c.field-meta.xml
<CustomField>
    <fullName>blng__Refunds__c</fullName>
    <label>Refunds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>