force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__TaxGLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipName>TaxGLTreatmentDebitNoteAllocationsCNLine</relationshipName>
    <type>Lookup</type>
</CustomField>