force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__TaxRule__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipName>TaxRuleDebitNoteAllocationsCNLine</relationshipName>
    <type>Lookup</type>
</CustomField>