force-app/main/default/objects/blng__DebitNoteAllocationCreditNoteLine__c/fields/blng__Type__c.field-meta.xml
<CustomField>
    <fullName>blng__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
    </valueSet>
</CustomField>